URL Shorteners freak paranoids

--- a/assets/bw-at.ini
+++ b/assets/bw-at.ini
@@ -44,12 +44,10 @@ user =
 
 
 [HOTKEYS]
-; # = Win
-; ! = Alt
-; + = Shift
-; ^ = Control
-; https://is.gd/Modifier
-; https://is.gd/KeysList
+; Symbols:
+; https://www.autohotkey.com/docs/Hotkeys.htm#Symbols
+; Key list:
+; https://www.autohotkey.com/docs/KeyList.htm#keyboard
 
 ; At very least, one of the following
 ; hotkeys must be active (not blank).
