Set bw.exe location as "Advanced" setting

--- a/assets/bw-at.ini
+++ b/assets/bw-at.ini
@@ -1,8 +1,4 @@
 [GENERAL]
-bw =
-; Bitwarden CLI path
-; (if custom name/path)
-
 totp =
 ; Put TOTP in Clipboard?
 ; 1/0 true/false yes/no
@@ -161,3 +157,9 @@ exclude =
 
 [UPDATES]
 last-check =
+
+
+[ADVANCED]
+bw =
+; Bitwarden CLI path
+; (if custom name/path)
