Support for custom login server

--- a/assets/bw-at.ini
+++ b/assets/bw-at.ini
@@ -163,3 +163,10 @@ last-check =
 bw =
 ; Bitwarden CLI path
 ; (if custom name/path)
+
+server =
+; For "On-premises Hosting"
+
+NODE_EXTRA_CA_CERTS =
+; If "On-premises Hosting" relies on self-signed certificates. Info:
+; https://bitwarden.com/help/article/cli/#using-self-signed-certificates
