Add API  Key as login method

--- a/bw-at.ini
+++ b/bw-at.ini
@@ -14,6 +14,14 @@ tsl = 0
 ; 3 = Yubico security key
 ; Two-step Login for Bitwarden
 
+api-key = 0
+; 0 = Disabled
+; 1 = Login via API key
+
+client-id     =
+client-secret =
+; API Login information
+
 
 [GENERAL]
 pin = 0
