--- a/bw-at.ini
+++ b/bw-at.ini
@@ -9,9 +9,9 @@ user =
 
 tsl = 0
 ; 0 = None
-; 1 = Email codes
-; 2 = Authenticator app
-; 3 = Yubico security key
+; 1 = Email Verification Codes
+; 2 = Authenticator Application
+; 3 = YubiKey OTP Security Key
 ; Two-step Login for Bitwarden
 
 api-key = 0
@@ -27,14 +27,14 @@ client-secret =
 pin = 0
 ; 0 = Disabled
 ; 1 = Custom PIN number
-; 2 = Authenticator app code
-; Unlock via PIN or Authenticator app
+; 2 = Authenticator Application
+; Unlock via PIN or Authenticator
 
 totp = 2
 ; 0 = Disabled
 ; 1 = Add TOTP to Clipboard
 ; 2 = Suppress notifications
-; Generate Authenticator app codes
+; Generate Authenticator codes
 ; https://en.wikipedia.org/wiki/Time-based_One-Time_Password
 
 tcato = 0
